Temporarily change farnsworth and sternberg sets.
Until we can build in url testing for XOAI in dltn_harvester, we
have to add as MODS directly. We can change these backs once this
is done.

--- a/sets.yml
+++ b/sets.yml
@@ -16,8 +16,8 @@ rhodes:
   - crossroads_sanitation
   - crossroads_sugarmon
   - crossroads_triangle
-  - rhodes_farnsworth
-  - rhodes_sternberg
+  - rhodes_fansworth_MODS
+  - rhodes_sternberg_MODS
 knoxpl:
   - p15136coll1
   - p15136coll2
