Include newly added sets in Repox from UTK.

--- a/sets.yml
+++ b/sets.yml
@@ -167,8 +167,10 @@ utk:
   - utk_sturley
   - utk_swim
   - utk_tenncities
+  - utk_tennessean
   - utk_tenngirl
   - utk_thompson
+  - utk_torch
   - utk_univmonthly
   - utk_utsmc
   - utk_vanvactor
@@ -176,6 +178,7 @@ utk:
   - utk_volvoices
   - utk_vpmoore
   - utk_wderfilms
+  - utk_yrb
 utc:
   - p16877coll1
   - p16877coll2
