--- a/sets.yml
+++ b/sets.yml
@@ -132,6 +132,7 @@ utk:
   - utk_adams
   - utk_agee
   - utk_agrtfhs
+  - utk_agrtfn
   - utk_agrutesc
   - utk_airscoop
   - utk_alumnus
@@ -157,6 +158,7 @@ utk:
   - utk_indtruth
   - utk_kefauver
   - utk_knoxgardens
+  - utk_marchingband
   - utk_mpabaker
   - utk_mugwump
   - utk_phoenix
