Change set name from p15138coll23 to tsla_p15138coll23.

--- a/sets.yml
+++ b/sets.yml
@@ -87,7 +87,7 @@ tsla:
   - p15138coll20
   - p15138coll21
   - p15138coll22
-  - p15138coll23
+  - tsla_p15138coll23
   - p15138coll24
   - p15138coll25
   - p15138coll26
