Add two sets for June ingest.

--- a/sets.yml
+++ b/sets.yml
@@ -61,6 +61,7 @@ mtsu:
   - mtsu_p15838coll3
   - mtsu_p15838coll4
   - mtsu_p15838coll7
+  - mtsu_p15838coll16
   - mtsu_schools
   - mtsu_shades
 nashville:
@@ -210,6 +211,7 @@ utk:
   - utk_tenncities
   - utk_tennessean
   - utk_tenngirl
+  - utk_tennvolsmag
   - utk_thompson
   - utk_torch
   - utk_univmonthly
