New sets added, two updated, and one remove (humbug) for Dec DPLA ingest.

--- a/sets.yml
+++ b/sets.yml
@@ -101,6 +101,7 @@ tntech:
   - tntech4
   - tntech_PS
   - tntech_june24
+  - tntech_dec24
 tsla:
   - agricult
   - bernhardt
@@ -213,7 +214,6 @@ utk:
   - utk_hbs
   - utk_heilman
   - utk_hesler
-  - utk_humbug
   - utk_insurancena
   - utk_indtruth
   - utk_jsevier
@@ -255,7 +255,7 @@ utk:
   - utk_sturley
   - utk_swim
   - utk_tatum
-  - utk_tdh
+  - utk_tdh_2
   - utk_tenncities
   - utk_tennessean
   - utk_tenngirl
@@ -270,7 +270,7 @@ utk:
   - utk_vanvactor
   - utk_voice
   - utk_voloh
-  - utk_volvoices
+  - utk_volvoices_2
   - utk_vpmoore
   - utk_walden
   - utk_wallace
@@ -337,3 +337,6 @@ utc:
   - utc_p16877coll54
   - utc_p16877coll55
   - utc_p16877coll56
+  - utc_p16877coll57
+  - utc_p16877coll58
+  - utc_p16877coll60
