Add MTSU coll 17.

--- a/sets.yml
+++ b/sets.yml
@@ -84,6 +84,7 @@ mtsu:
   - mtsu_p15838coll4
   - mtsu_p15838coll7
   - mtsu_p15838coll16
+  - mtsu_p15838coll17
   - mtsu_schools
   - mtsu_shades
 nashville:
